--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.2.1",
     "flatlist-react": "^1.5.0",
     "next": "10.2.0",
+    "next-images": "^1.7.0",
     "next-redux-wrapper": "^6.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
