--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,11 @@ yarn-error.log*
 
 # vercel
 .vercel
+.idea/misc.xml
+.idea/modules.xml
+.idea/shoppingprj.iml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/codeStyles/codeStyleConfig.xml
+.idea/codeStyles/Project.xml
+.idea/inspectionProfiles/Project_Default.xml
